Bug 96231 - sparc64 can't handle BAR above 4GB
Summary: sparc64 can't handle BAR above 4GB
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: PCI (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_pci@kernel-bugs.osdl.org
URL: http://lkml.kernel.org/r/CAE9FiQU1gJY...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-07 02:19 UTC by Bjorn Helgaas
Modified: 2015-05-16 15:17 UTC (History)
1 user (show)

See Also:
Kernel Version: v4.0-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmesg log (failing) (49.65 KB, text/plain)
2015-04-07 02:19 UTC, Bjorn Helgaas
Details

Description Bjorn Helgaas 2015-04-07 02:19:13 UTC
Created attachment 173261 [details]
dmesg log (failing)

David Ahern reported that v4.0-rc1 doesn't boot on sparc/T5-8.  See attached dmesg log.

  pci 0000:06:00.0: reg 0x184: can't handle BAR above 4GB (bus address 0x110204000)
  pci 0000:06:00.0: reg 0x190: can't handle BAR above 4GB (bus address 0x110304000)
  ...
Comment 1 Bjorn Helgaas 2015-05-16 15:17:13 UTC
David Ahern bisected this to d63e2e1f3df9 ("sparc/PCI: Clip bridge windows to fit in upstream windows").

We reverted that with d10b730f97a7 ("Revert "sparc/PCI: Clip bridge windows to fit in upstream windows""), which appeared in v4.0, so this should be fixed.

We'd still like to include the original d63e2e1f3df9 functionality, to make this more consistent across architectures, but we need to fix the problems on sparc first.

Note You need to log in before you can comment on or make changes to this bug.